// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`visual: SystemStatsView placeholder (no stats yet) — only the genie banner is shown 1`] = `
"── visible chars ──
 genie vX.Y.Z
── colour spans ──
row 00: [fg=#7fc8a9 bg=#0f2638]"genie" [fg=#8a9499 bg=#0f2638]" vX.Y.Z""
`;

exports[`visual: SystemStatsView 10% load — mint accent across CPU/RAM/Load (no warning, no alarm) 1`] = `
"── visible chars ──
 genie vX.Y.Z                      
 CPU  10% [=-------] 8c                 
  hot #0 10%  #1 5%  #2 0%              
 RAM 1.6/16G [=-------]                 
 Load 10% (0.8/8 busy)
── colour spans ──
row 00: [fg=#7fc8a9 bg=#0f2638]"genie" [fg=#8a9499 bg=#0f2638]" vX.Y.Z"
row 01: [fg=#5e6e74 bg=#0f2638]"CPU " [fg=#7fc8a9 bg=#0f2638]" 10% [=-------]" [fg=#8a9499 bg=#0f2638]" 8c"
row 02: [fg=#5e6e74 bg=#0f2638]" hot " [fg=#d4a574 bg=#0f2638]"#0 10%  #1 5%  #2 0%"
row 03: [fg=#5e6e74 bg=#0f2638]"RAM " [fg=#7fc8a9 bg=#0f2638]"1.6/16G [=-------]"
row 04: [fg=#5e6e74 bg=#0f2638]"Load " [fg=#7fc8a9 bg=#0f2638]"10%" [fg=#8a9499 bg=#0f2638]" (0.8/8 busy)""
`;

exports[`visual: SystemStatsView 50% load — still mint (recalibrated threshold is >70, not >50) 1`] = `
"── visible chars ──
 genie vX.Y.Z                      
 CPU  50% [====----] 8c                 
  hot #0 50%  #1 45%  #2 40%            
 RAM 8/16G [====----]                   
 Load 50% (4/8 busy)
── colour spans ──
row 00: [fg=#7fc8a9 bg=#0f2638]"genie" [fg=#8a9499 bg=#0f2638]" vX.Y.Z"
row 01: [fg=#5e6e74 bg=#0f2638]"CPU " [fg=#7fc8a9 bg=#0f2638]" 50% [====----]" [fg=#8a9499 bg=#0f2638]" 8c"
row 02: [fg=#5e6e74 bg=#0f2638]" hot " [fg=#d4a574 bg=#0f2638]"#0 50%  #1 45%  #2 40%"
row 03: [fg=#5e6e74 bg=#0f2638]"RAM " [fg=#7fc8a9 bg=#0f2638]"8/16G [====----]"
row 04: [fg=#5e6e74 bg=#0f2638]"Load " [fg=#7fc8a9 bg=#0f2638]"50%" [fg=#8a9499 bg=#0f2638]" (4/8 busy)""
`;

exports[`visual: SystemStatsView 85% load — warning band (amber for the >70 threshold) 1`] = `
"── visible chars ──
 genie vX.Y.Z                      
 CPU  85% [=======-] 8c                 
  hot #0 85%  #1 80%  #2 75%            
 RAM 13.6/16G [=======-]                
 Load 85% (6.8/8 busy)
── colour spans ──
row 00: [fg=#7fc8a9 bg=#0f2638]"genie" [fg=#8a9499 bg=#0f2638]" vX.Y.Z"
row 01: [fg=#5e6e74 bg=#0f2638]"CPU " [fg=#d4a574 bg=#0f2638]" 85% [=======-]" [fg=#8a9499 bg=#0f2638]" 8c"
row 02: [fg=#5e6e74 bg=#0f2638]" hot " [fg=#d4a574 bg=#0f2638]"#0 85%  #1 80%  #2 75%"
row 03: [fg=#5e6e74 bg=#0f2638]"RAM " [fg=#d4a574 bg=#0f2638]"13.6/16G [=======-]"
row 04: [fg=#5e6e74 bg=#0f2638]"Load " [fg=#d4a574 bg=#0f2638]"85%" [fg=#8a9499 bg=#0f2638]" (6.8/8 busy)""
`;

exports[`visual: SystemStatsView 95% load — alarm band (crimson for the >90 threshold) 1`] = `
"── visible chars ──
 genie vX.Y.Z                      
 CPU  95% [========] 8c                 
  hot #0 95%  #1 90%  #2 85%            
 RAM 15.2/16G [========]                
 Load 95% (7.6/8 busy)
── colour spans ──
row 00: [fg=#7fc8a9 bg=#0f2638]"genie" [fg=#8a9499 bg=#0f2638]" vX.Y.Z"
row 01: [fg=#5e6e74 bg=#0f2638]"CPU " [fg=#a83838 bg=#0f2638]" 95% [========]" [fg=#8a9499 bg=#0f2638]" 8c"
row 02: [fg=#5e6e74 bg=#0f2638]" hot " [fg=#d4a574 bg=#0f2638]"#0 95%  #1 90%  #2 85%"
row 03: [fg=#5e6e74 bg=#0f2638]"RAM " [fg=#a83838 bg=#0f2638]"15.2/16G [========]"
row 04: [fg=#5e6e74 bg=#0f2638]"Load " [fg=#a83838 bg=#0f2638]"95%" [fg=#8a9499 bg=#0f2638]" (7.6/8 busy)""
`;

exports[`visual: TreeNode (workspace agent states) agent state = running — palette + icon match the design 1`] = `
"── visible chars ──
  ● engineer (1 window) [agent]
── colour spans ──
row 00: [fg=#7fc8a9 bg=#000000]"● " [fg=#c9cfd4 bg=#000000]"engineer" [fg=#8a9499 bg=#000000]" (1 window)" [fg=#5e6e74 bg=#000000]" [agent]""
`;

exports[`visual: TreeNode (workspace agent states) agent state = stopped — palette + icon match the design 1`] = `
"── visible chars ──
  ○ engineer [agent]
── colour spans ──
row 00: [fg=#8a9499 bg=#000000]"  ○ " [fg=#c9cfd4 bg=#000000]"engineer" [fg=#5e6e74 bg=#000000]" [agent]""
`;

exports[`visual: TreeNode (workspace agent states) agent state = error — palette + icon match the design 1`] = `
"── visible chars ──
  ⊘ engineer [agent]
── colour spans ──
row 00: [fg=#a83838 bg=#000000]"⊘ " [fg=#c9cfd4 bg=#000000]"engineer" [fg=#5e6e74 bg=#000000]" [agent]""
`;

exports[`visual: TreeNode (workspace agent states) agent state = spawning — palette + icon match the design 1`] = `
"── visible chars ──
  ⌛ engineer [stuck — press R to retry]
── colour spans ──
row 00: [fg=#d4a574 bg=#000000]"⌛ " [fg=#c9cfd4 bg=#000000]"engineer" [fg=#8a9499 bg=#000000]" [stuck — press R to retry]""
`;

exports[`visual: TreeNode (workspace agent states) selected agent — accentDim row background + accentBright label 1`] = `
"── visible chars ──
  ● engineer (1 window) [agent]
── colour spans ──
row 00: [fg=#7fc8a9 bg=#5a9d82]"● " [fg=#9eddc1 bg=#5a9d82]"engineer" [fg=#8a9499 bg=#5a9d82]" (1 window)" [fg=#5e6e74 bg=#5a9d82]" [agent]""
`;

exports[`visual: AgentPicker empty directory — "No agents registered" message is rendered 1`] = `
"── visible chars ──
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
          ╭──────────────────────────────────────────────────────────────────────────────╮          
          │                                                                              │          
          │ Spawn here — new window in session simone                                    │          
          │                                                                              │          
          │ Filter:  (type to narrow)                                                    │          
          │                                                                              │          
          │ No agents registered                                                         │          
          │                                                                              │          
          ╰──────────────────────────────────────────────────────────────────────────────╯
── colour spans ──
row 06: [fg=#7fc8a9 bg=#0f2638]"╭──────────────────────────────────────────────────────────────────────────────╮"
row 07: [fg=#7fc8a9 bg=#0f2638]"│" [fg=#7fc8a9 bg=#0f2638]"│"
row 08: [fg=#7fc8a9 bg=#0f2638]"│" [fg=#7fc8a9 bg=#0f2638]"Spawn here" [fg=#8a9499 bg=#0f2638]" — new window in session " [fg=#c9cfd4 bg=#0f2638]"simone" [fg=#7fc8a9 bg=#0f2638]"│"
row 09: [fg=#7fc8a9 bg=#0f2638]"│" [fg=#7fc8a9 bg=#0f2638]"│"
row 10: [fg=#7fc8a9 bg=#0f2638]"│" [fg=#8a9499 bg=#0f2638]"Filter: " [fg=#5e6e74 bg=#0f2638]"(type to narrow)" [fg=#7fc8a9 bg=#0f2638]"│"
row 11: [fg=#7fc8a9 bg=#0f2638]"│" [fg=#7fc8a9 bg=#0f2638]"│"
row 12: [fg=#7fc8a9 bg=#0f2638]"│" [fg=#5e6e74 bg=#0f2638]"No agents registered" [fg=#7fc8a9 bg=#0f2638]"│"
row 13: [fg=#7fc8a9 bg=#0f2638]"│" [fg=#7fc8a9 bg=#0f2638]"│"
row 14: [fg=#7fc8a9 bg=#0f2638]"╰──────────────────────────────────────────────────────────────────────────────╯""
`;

exports[`visual: AgentPicker populated — three agents listed with first row selected 1`] = `
"── visible chars ──
                                                                                                    
                                                                                                    
                                                                                                    
          ╭──────────────────────────────────────────────────────────────────────────────╮          
          │                                                                              │          
          │ Spawn here — in window simone:1                                              │          
          │                                                                              │          
          │ Filter:  (type to narrow)                                                    │          
          │                                                                              │          
          │ ▸ engineer                                                                   │          
          │   reviewer                                                                   │          
          │   qa                                                                         │          
          │                                                                              │          
          │  ▶ 'spawn' 'engineer' '--session' 'simone' '--window' 'simone:1'             │          
          │  Enter to run · Esc to cancel                                                │          
          │                                                                              │          
          ╰──────────────────────────────────────────────────────────────────────────────╯
── colour spans ──
row 03: [fg=#7fc8a9 bg=#0f2638]"╭──────────────────────────────────────────────────────────────────────────────╮"
row 04: [fg=#7fc8a9 bg=#0f2638]"│" [fg=#7fc8a9 bg=#0f2638]"│"
row 05: [fg=#7fc8a9 bg=#0f2638]"│" [fg=#7fc8a9 bg=#0f2638]"Spawn here" [fg=#8a9499 bg=#0f2638]" — in window " [fg=#c9cfd4 bg=#0f2638]"simone:1" [fg=#7fc8a9 bg=#0f2638]"│"
row 06: [fg=#7fc8a9 bg=#0f2638]"│" [fg=#7fc8a9 bg=#0f2638]"│"
row 07: [fg=#7fc8a9 bg=#0f2638]"│" [fg=#8a9499 bg=#0f2638]"Filter: " [fg=#5e6e74 bg=#0f2638]"(type to narrow)" [fg=#7fc8a9 bg=#0f2638]"│"
row 08: [fg=#7fc8a9 bg=#0f2638]"│" [fg=#7fc8a9 bg=#0f2638]"│"
row 09: [fg=#7fc8a9 bg=#0f2638]"│" [fg=#7fc8a9 bg=#0f2638]"▸ " [fg=#9eddc1 bg=#0f2638]"engineer" [fg=#7fc8a9 bg=#0f2638]"│"
row 10: [fg=#7fc8a9 bg=#0f2638]"│" [fg=#8a9499 bg=#0f2638]"  reviewer" [fg=#7fc8a9 bg=#0f2638]"│"
row 11: [fg=#7fc8a9 bg=#0f2638]"│" [fg=#8a9499 bg=#0f2638]"  qa" [fg=#7fc8a9 bg=#0f2638]"│"
row 12: [fg=#7fc8a9 bg=#0f2638]"│" [fg=#7fc8a9 bg=#0f2638]"│"
row 13: [fg=#7fc8a9 bg=#0f2638]"│" [fg=#7fc8a9 bg=#0f2638]"▶ " [fg=#c9cfd4 bg=#0f2638]"'spawn' 'engineer' '--session' 'simone' '--window' 'simone:1'" [fg=#7fc8a9 bg=#0f2638]"│"
row 14: [fg=#7fc8a9 bg=#0f2638]"│" [fg=#5e6e74 bg=#0f2638]"Enter to run · Esc to cancel" [fg=#7fc8a9 bg=#0f2638]"│"
row 15: [fg=#7fc8a9 bg=#0f2638]"│" [fg=#7fc8a9 bg=#0f2638]"│"
row 16: [fg=#7fc8a9 bg=#0f2638]"╰──────────────────────────────────────────────────────────────────────────────╯""
`;

exports[`visual: AgentPicker filtered — typing "rev" narrows the list to "reviewer" 1`] = `
"── visible chars ──
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
          ╭──────────────────────────────────────────────────────────────────────────────╮          
          │                                                                              │          
          │ Spawn here — in window simone:1                                              │          
          │                                                                              │          
          │ Filter: rev                                                                  │          
          │                                                                              │          
          │ ▸ reviewer                                                                   │          
          │                                                                              │          
          │  ▶ 'spawn' 'reviewer' '--session' 'simone' '--window' 'simone:1'             │          
          │  Enter to run · Esc to cancel                                                │          
          │                                                                              │          
          ╰──────────────────────────────────────────────────────────────────────────────╯
── colour spans ──
row 04: [fg=#7fc8a9 bg=#0f2638]"╭──────────────────────────────────────────────────────────────────────────────╮"
row 05: [fg=#7fc8a9 bg=#0f2638]"│" [fg=#7fc8a9 bg=#0f2638]"│"
row 06: [fg=#7fc8a9 bg=#0f2638]"│" [fg=#7fc8a9 bg=#0f2638]"Spawn here" [fg=#8a9499 bg=#0f2638]" — in window " [fg=#c9cfd4 bg=#0f2638]"simone:1" [fg=#7fc8a9 bg=#0f2638]"│"
row 07: [fg=#7fc8a9 bg=#0f2638]"│" [fg=#7fc8a9 bg=#0f2638]"│"
row 08: [fg=#7fc8a9 bg=#0f2638]"│" [fg=#8a9499 bg=#0f2638]"Filter: " [fg=#c9cfd4 bg=#0f2638]"rev" [fg=#7fc8a9 bg=#0f2638]"│"
row 09: [fg=#7fc8a9 bg=#0f2638]"│" [fg=#7fc8a9 bg=#0f2638]"│"
row 10: [fg=#7fc8a9 bg=#0f2638]"│" [fg=#7fc8a9 bg=#0f2638]"▸ " [fg=#9eddc1 bg=#0f2638]"reviewer" [fg=#7fc8a9 bg=#0f2638]"│"
row 11: [fg=#7fc8a9 bg=#0f2638]"│" [fg=#7fc8a9 bg=#0f2638]"│"
row 12: [fg=#7fc8a9 bg=#0f2638]"│" [fg=#7fc8a9 bg=#0f2638]"▶ " [fg=#c9cfd4 bg=#0f2638]"'spawn' 'reviewer' '--session' 'simone' '--window' 'simone:1'" [fg=#7fc8a9 bg=#0f2638]"│"
row 13: [fg=#7fc8a9 bg=#0f2638]"│" [fg=#5e6e74 bg=#0f2638]"Enter to run · Esc to cancel" [fg=#7fc8a9 bg=#0f2638]"│"
row 14: [fg=#7fc8a9 bg=#0f2638]"│" [fg=#7fc8a9 bg=#0f2638]"│"
row 15: [fg=#7fc8a9 bg=#0f2638]"╰──────────────────────────────────────────────────────────────────────────────╯""
`;

exports[`visual: QuitDialog default — overlay + bordered panel + "Quit genie?" prompt 1`] = `
"── visible chars ──
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                  ┌───────────────────────────────────────────┐                 
                  │                                           │                 
                  │                Quit genie?                │                 
                  │                                           │                 
                  │      Enter to quit  |  Esc to cancel      │                 
                  │                                           │                 
                  │   Hint: Ctrl+D to detach (keep running)   │                 
                  │                                           │                 
                  └───────────────────────────────────────────┘
── colour spans ──
row 06: [fg=#7fc8a9 bg=#0f2638]"┌───────────────────────────────────────────┐"
row 07: [fg=#7fc8a9 bg=#0f2638]"│" [fg=#7fc8a9 bg=#0f2638]"│"
row 08: [fg=#7fc8a9 bg=#0f2638]"│" [fg=#7fc8a9 bg=#0f2638]"Quit genie?" [fg=#7fc8a9 bg=#0f2638]"│"
row 09: [fg=#7fc8a9 bg=#0f2638]"│" [fg=#7fc8a9 bg=#0f2638]"│"
row 10: [fg=#7fc8a9 bg=#0f2638]"│" [fg=#c9cfd4 bg=#0f2638]"Enter" [fg=#8a9499 bg=#0f2638]" to quit " [fg=#5e6e74 bg=#0f2638]" | " [fg=#c9cfd4 bg=#0f2638]" Esc" [fg=#8a9499 bg=#0f2638]" to cancel" [fg=#7fc8a9 bg=#0f2638]"│"
row 11: [fg=#7fc8a9 bg=#0f2638]"│" [fg=#7fc8a9 bg=#0f2638]"│"
row 12: [fg=#7fc8a9 bg=#0f2638]"│" [fg=#5e6e74 bg=#0f2638]"Hint: Ctrl+D to detach (keep running)" [fg=#7fc8a9 bg=#0f2638]"│"
row 13: [fg=#7fc8a9 bg=#0f2638]"│" [fg=#7fc8a9 bg=#0f2638]"│"
row 14: [fg=#7fc8a9 bg=#0f2638]"└───────────────────────────────────────────┘""
`;

exports[`visual: TeamCreate step 1 (name) — input field + cli preview line 1`] = `
"── visible chars ──
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                  ┌──────────────────────────────────────────────────────────────┐                  
                  │                                                              │                  
                  │   New team — step 1 of 2                                     │                  
                  │                                                              │                  
                  │   Team name (git-branch-safe):                               │                  
                  │                                                              │                  
                  │   feat/auth-bug                                              │                  
                  │                                                              │                  
                  │    ▶ 'team' 'create' 'TEAM_NAME' '--repo' '/repo'            │                  
                  │    Enter: next · Esc: cancel                                 │                  
                  │                                                              │                  
                  └──────────────────────────────────────────────────────────────┘
── colour spans ──
row 06: [fg=#7fc8a9 bg=#0f2638]"┌──────────────────────────────────────────────────────────────┐"
row 07: [fg=#7fc8a9 bg=#0f2638]"│" [fg=#7fc8a9 bg=#0f2638]"│"
row 08: [fg=#7fc8a9 bg=#0f2638]"│" [fg=#7fc8a9 bg=#0f2638]"New team" [fg=#5e6e74 bg=#0f2638]" — step 1 of 2" [fg=#7fc8a9 bg=#0f2638]"│"
row 09: [fg=#7fc8a9 bg=#0f2638]"│" [fg=#7fc8a9 bg=#0f2638]"│"
row 10: [fg=#7fc8a9 bg=#0f2638]"│" [fg=#8a9499 bg=#0f2638]"Team name (git-branch-safe):" [fg=#7fc8a9 bg=#0f2638]"│"
row 11: [fg=#7fc8a9 bg=#0f2638]"│" [fg=#7fc8a9 bg=#0f2638]"│"
row 12: [fg=#7fc8a9 bg=#0f2638]"│" [fg=#5e6e74 bg=#0a1d2a]"feat/auth-bug" [fg=#7fc8a9 bg=#0f2638]"│"
row 13: [fg=#7fc8a9 bg=#0f2638]"│" [fg=#7fc8a9 bg=#0f2638]"│"
row 14: [fg=#7fc8a9 bg=#0f2638]"│" [fg=#7fc8a9 bg=#0f2638]"▶ " [fg=#c9cfd4 bg=#0f2638]"'team' 'create' 'TEAM_NAME' '--repo' '/repo'" [fg=#7fc8a9 bg=#0f2638]"│"
row 15: [fg=#7fc8a9 bg=#0f2638]"│" [fg=#5e6e74 bg=#0f2638]"Enter: next · Esc: cancel" [fg=#7fc8a9 bg=#0f2638]"│"
row 16: [fg=#7fc8a9 bg=#0f2638]"│" [fg=#7fc8a9 bg=#0f2638]"│"
row 17: [fg=#7fc8a9 bg=#0f2638]"└──────────────────────────────────────────────────────────────┘""
`;

exports[`visual: ContextMenu running agent menu — five items with bordered overlay 1`] = `
"── visible chars ──
╭──────────────────────────────╮                                                
│ ▶ Clone  N                   │                                                
│   New window  W              │                                                
│   Spawn into…  I             │                                                
│   Rename...  R               │                                                
│   Remove  K                  │                                                
╰──────────────────────────────╯
── colour spans ──
row 00: [fg=#7fc8a9 bg=#0f2638]"╭──────────────────────────────╮"
row 01: [fg=#7fc8a9 bg=#0f2638]"│" [fg=#9eddc1 bg=#5a9d82]"▶ Clone  N" [fg=#7fc8a9 bg=#0f2638]"│"
row 02: [fg=#7fc8a9 bg=#0f2638]"│" [fg=#ffffff bg=#1a1a1a]"   New window  W              " [fg=#7fc8a9 bg=#0f2638]"│"
row 03: [fg=#7fc8a9 bg=#0f2638]"│" [fg=#ffffff bg=#1a1a1a]"   Spawn into…  I             " [fg=#7fc8a9 bg=#0f2638]"│"
row 04: [fg=#7fc8a9 bg=#0f2638]"│" [fg=#ffffff bg=#1a1a1a]"   Rename...  R               " [fg=#7fc8a9 bg=#0f2638]"│"
row 05: [fg=#7fc8a9 bg=#0f2638]"│" [fg=#ffffff bg=#1a1a1a]"   Remove  K                  " [fg=#7fc8a9 bg=#0f2638]"│"
row 06: [fg=#7fc8a9 bg=#0f2638]"╰──────────────────────────────╯""
`;

exports[`visual: Nav (loading skeleton) cold start — header + collecting placeholder + footer 1`] = `
"── visible chars ──
 Sessions                                         
                                                  
                                                  
                                                  
                                                  
                                                  
                                                  
                                                  
                                                  
                  Collecting...                   
                                                  
                                                  
                                                  
                                                  
                                                  
                                                  
                                                  
                                                  
 genie vX.Y.Z                                
 ↑↓:nav ←→:expand Enter:attach ^T:new R:retry .:
── colour spans ──
row 00: [fg=#7fc8a9 bg=#0f2638]"Sessions"
row 09: [fg=#8a9499 bg=#0a1d2a]"Collecting..."
row 18: [fg=#7fc8a9 bg=#0f2638]"genie" [fg=#8a9499 bg=#0f2638]" vX.Y.Z"
row 19: [fg=#5e6e74 bg=#0f2638]"↑↓:nav ←→:expand Enter:attach ^T:new R:retry .:""
`;
